# Plane-Radar

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  cliff.toml  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
display/: __init__.py  driver.py
plane_radar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
radar/: __init__.py  display.py  range.py  squawk.py  theme.py
scripts/: harden-pi.sh
services/: __init__.py  adsb_client.py  location.py
tests/: test_adsb_client.py  test_config.py  test_range.py  test_squawk.py
web/: server.py
